fixed alignment

--- a/apistagram/app/assets/stylesheets/style.css
+++ b/apistagram/app/assets/stylesheets/style.css
@@ -1280,7 +1280,7 @@ h2 {
 	width: 250px;
 	display: inline-block;
 	margin-left: 10px;
-	margin-top: 72px;
+	margin-top: 15px;
 }
 
 .user-profile-thumbnail {
